--- a/web/src/index.html
+++ b/web/src/index.html
@@ -5,7 +5,10 @@
     <title>Forum</title>
     <base href="/" />
     <meta name="theme-color" content="#fff" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="viewport"
+      content="width=device-width,initial-scale=1,user-scalable=no"
+    />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link rel="manifest" href="manifest.webmanifest" />
     <link rel="stylesheet" href="fonts/opensans.css" />
